
		---------------//---------------//---------------
		
- (rev 427)
Change: removed Chameleon.xcodeproj.

Motif:  it's not up to date and i need time to update it properly, at least on Chazi.
		Will reintroduce it later in the process. It's also giving me problems with the svn client
		when i update it; need to check what i'm doing wrong!?

		---------------//---------------//---------------
		
- (rev 460)
Change: added a key to display some debug info, that can only be accessed via code edit.
		Check http://forge.voodooprojects.org/p/chameleon/issues/12/ for history.
		mm & attr, resolution specific info, are borrowed from AutoResolution branch.
		
		DebugInfo=y enables display of debug info.

  Note: Boot Banner(*)=n will override DebugInfo=y , disabling the display of this info.
		Disabled by default.

Motif:  just making this info easily accessible.

		---------------//---------------//---------------
		---------------//---------------//---------------
		
- (rev 462)
Change:	creation of this project, replacing Chazileon as my work folder.
		Ence, Chazileon is now frozen until archival and deletion.

Motif:  Chazileon (Chazi) has no svn history.

		---------------//---------------//---------------
		
- (revs 465 --> 467, 469 --> 471)
Change:	added AutoResolution patch, by Lebidou (AutoResolution branch). The main intention of this
		patch, is allowing native resolution after boot, even without graphics acceleration (qe/ci).
		The "side effect" is that it also enables native resolution at boot prompt (Gui).
		The con: doesn't work for all devices!!
		
		AutoResolution=y enables the patch.

  Note: Obviously, it only works in Graphics Mode (Gui).
		Disabled by default.

Motif:  ... mentioned above. Check the topic for more details:
		http://forum.voodooprojects.org/index.php/topic,1227.0.html

		---------------//---------------//---------------
		
- (rev )
Change:				template

Motif:

		---------------//---------------//---------------



Azimutz

